dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/Tao.OpenGl/Gl.cs)
AC_CONFIG_AUX_DIR(.auto)

VERSION=2.0.0.svn20080217
PACKAGE=taoframework

AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
AC_SUBST(VERSION)

AM_MAINTAINER_MODE

AC_OUTPUT(
  Makefile
  src/Makefile
  src/Tao.OpenGl/Makefile
  src/Tao.Platform.X11/Makefile
  src/Tao.OpenAl/Makefile
  src/Tao.Ode/Makefile
  src/Tao.Sdl/Makefile
  src/Tao.FreeType/Makefile
  src/Tao.FreeGlut/Makefile
  src/Tao.DevIl/Makefile
  src/Tao.Platform.Windows/Makefile
  src/Tao.Glfw/Makefile
  src/Tao.Cg/Makefile
  src/Tao.Lua/Makefile
  src/Tao.FFmpeg/Makefile
  src/Tao.PhysFs/Makefile
  src/Tao.GlBindGen/Makefile
  tests/Makefile
  tests/Ode/Makefile
  tests/Sdl/Makefile
  examples/Makefile
  examples/CgExamples/Makefile
  examples/Redbook/Makefile
  examples/GlfwExamples/Makefile
  examples/OpenAlExamples/Makefile
  examples/GeWangExamples/Makefile
  examples/SdlExamples/Makefile
  examples/PhysFsExamples/Makefile
  examples/NateRobins/Makefile
  examples/LuaExamples/Makefile
  examples/FreeGlutExamples/Makefile
  examples/DevIlExamples/Makefile
  examples/NeHe/Makefile
  examples/FFmpegExamples/Makefile
  examples/OdeExamples/Makefile
)

