
SUBDIRS = Tao.Cg \
          Tao.DevIl \
          Tao.FFmpeg \
          Tao.FreeGlut \
          Tao.FreeType \
          Tao.GlBindGen \
          Tao.Glfw \
          Tao.Lua \
          Tao.Ode \
          Tao.OpenAl \
          Tao.OpenGl \
          Tao.PhysFs \
          Tao.Platform.Windows \
          Tao.Platform.X11 \
          Tao.Sdl
