
ASSEMBLY = Tao.FtGl
SHORTNAME = tao-ftgl
VERSION = @TAOFTGL_VERSION@
MAJOR = @TAOFTGL_MAJOR@

PACKAGES =
BINARY_LIBS = ../Tao.FreeType/Tao.FreeType.dll
SYSTEM_LIBS = System
RESOURCES =
SOURCES = \
        FtGl.cs \
        Properties/AssemblyInfo.cs
KEYFILE = $(ASSEMBLY).snk
CONFIGFILE = $(ASSEMBLY).dll.config

include $(top_srcdir)/Assembly.am

