
SUBDIRS = CgExamples \
          DevIlExamples \
          FFmpegExamples \
          FreeGlutExamples \
          GeWangExamples \
          GlfwExamples \
          LuaExamples \
          NateRobins \
          NeHe \
          OdeExamples \
          OpenAlExamples \
          PhysFsExamples \
          Redbook \
          SdlExamples
