
SUBDIRS = Tao.DevIl \
          Tao.FFmpeg \
          Tao.FreeType \
          Tao.GlBindGen \
          Tao.Lua \
          Tao.Ode \
          Tao.OpenAl \
          Tao.OpenGl \
          Tao.Platform.Windows \
          Tao.Platform.X11 \
          Tao.Cg \
          Tao.FreeGlut \
          Tao.Glfw \
          Tao.PhysFs \
          Tao.Sdl
