
PROGRAM = FtGlScrolling
PACKAGES =
BINARY_LIBS = Tao.FtGl.dll Tao.OpenGl.dll Tao.FreeGlut.dll Tao.FreeType.dll
SYSTEM_LIBS = System
RESX =
RESOURCES =
SOURCES = \
        FtGlScrolling.cs \
        Properties/AssemblyInfo.cs
KEYFILE = ../../src/Tao.FtGl/Tao.FtGl.snk

include $(top_srcdir)/Program.am

